<package format="2">
  <name>ros_componentrosjoy_node</name>
  <version>0.0.0</version>
  <description>The ros_componentrosjoy_node package</description>

  <license>Apache 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/system_test</url> -->

  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
