<package format="2">
  <name>ros_componentrosbaseinit</name>
  <version>0.0.0</version>
  <description>The ros_componentrosbaseinit package</description>

  <license>Apache 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/system_test</url> -->

  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>

</package>
